# Proyecto-MVC-CRUD-python-Flask

./: .env  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/controllers/: user_controller.py
app/models/: user.py
app/templates/: base.html  create_user.html  edit_profile.html  index.html  users_list.html  view_profile.html
app/views/: user_view.py  user_web_view.py
static/css/: styles.css
static/js/: script.js
